Fix progress bar, main slide alignment, etc.

--- a/media/css/dokieli.css
+++ b/media/css/dokieli.css
@@ -5343,6 +5343,7 @@ font-size:2.25em;
   left: 0;
   z-index: 1;
   display: none;
+  top: 0;
 }
 .shower .slide footer {
   right: 0;
@@ -5448,6 +5449,7 @@ font-size:2.25em;
   min-height: 100vh;
   padding-left: 260px;
   background: #eee;
+  overflow: hidden;
 }
 .shower.single .caption {
   display: block;
@@ -5476,10 +5478,10 @@ font-size:2.25em;
 }
 .shower.single .slide.active {
   position: absolute;
-  top: 50%;
+  top: 60px;
   left: 280px;
-  transform-origin: 0 50%;
-  transform: translateY(-50%) scale(0.7);
+  transform-origin: 0 0;
+  transform: scale(0.7);
   cursor: default;
   box-shadow: 0 16px 32px rgba(0,0,0,0.18);
   z-index: 2;
